Xfce v4.18: Fix odd gap between panel elements

--- a/gtk-3.20/apps/_xfce.scss
+++ b/gtk-3.20/apps/_xfce.scss
@@ -1,11 +1,14 @@
-.xfce4-panel.background {
+.xfce4-panel {
+  border-radius: 0;
+  &.background {
     background-color: $panel_bg_color;
     color: $fg_color;
 
     text-shadow: none;
     -gtk-icon-shadow: none;
+  }
 
-    button.flat { @extend %panelbutton; }
+  button.flat { @extend %panelbutton; }
 }
 
 #tasklist-button {
