--- a/gtk-3.20/gtk.css
+++ b/gtk-3.20/gtk.css
@@ -5786,11 +5786,13 @@ radiobutton.color-button:active > radio {
   background-repeat: no-repeat;
   background-size: calc(100% + 2px); }
 
-.xfce4-panel.background {
-  background-color: #1e1f29;
-  color: #f8f8f2;
-  text-shadow: none;
-  -gtk-icon-shadow: none; }
+.xfce4-panel {
+  border-radius: 0; }
+  .xfce4-panel.background {
+    background-color: #1e1f29;
+    color: #f8f8f2;
+    text-shadow: none;
+    -gtk-icon-shadow: none; }
 
 #tasklist-button {
   color: rgba(255, 255, 255, 0.8);
@@ -5805,20 +5807,20 @@ radiobutton.color-button:active > radio {
     background-color: rgba(0, 0, 0, 0.25);
     box-shadow: inset 0 -2px rgba(189, 147, 249, 0.5); }
 
-.xfce4-panel.background button.flat {
+.xfce4-panel button.flat {
   color: white;
   border-radius: 0;
   border: none;
   background-color: #1e1f29;
   font-weight: normal; }
-  .xfce4-panel.background button.flat:hover {
+  .xfce4-panel button.flat:hover {
     border: none;
     background-color: #343546; }
-  .xfce4-panel.background button.flat:active, .xfce4-panel.background button.flat:checked {
+  .xfce4-panel button.flat:active, .xfce4-panel button.flat:checked {
     color: white;
     border-bottom: 2px solid #bd93f9;
     background-color: #1a1b23; }
-    .xfce4-panel.background button.flat:active label, .xfce4-panel.background button.flat:active image, .xfce4-panel.background button.flat:checked label, .xfce4-panel.background button.flat:checked image {
+    .xfce4-panel button.flat:active label, .xfce4-panel button.flat:active image, .xfce4-panel button.flat:checked label, .xfce4-panel button.flat:checked image {
       color: inherit; }
 
 /********
